--- a/project/notes/projectnotes.html
+++ b/project/notes/projectnotes.html
@@ -23,4 +23,8 @@ if(perc = 1){
 $('.plant'+tobedetermined).css({'background':flowerStage})
 
 //Translate this to flower growth using background-url ^^^^^^^^^^^^^^^^
+
+
+e.stopPropagation(); //stops events from bubbling up or down the DOM, stops the parents event listener from effecting the child
+//might need to remember this exists
 </script>
