--- a/project/notes/projectnotes.html
+++ b/project/notes/projectnotes.html
@@ -12,7 +12,7 @@ $('.econ-ui p span').text(Math.round(perc*100))
 
 if(perc = 1){
     flowerStage = 'url(flower.png)'
-}else if(perc =< .999 && perc >= .665){
+}else if(perc <= .999 && perc >= .665){
     flowerStage = 'url(mid-stage.png)';
 }else if (perc >= .335 && perc < .665){
     flowerStage = 'url(seedling.png)';
