codechallenge5 and stuff

--- a/demos/day10/digitalClock.html
+++ b/demos/day10/digitalClock.html
@@ -81,6 +81,8 @@
         setInterval( function(){
             let today = new Date();
 
+            today.setHours(4);
+
             let cHour = today.getHours(),
                 cMins = today.getMinutes(),
                 cSecs = today.getSeconds(),
