pixelpatch work, bare minimum to be called

--- a/project/the-pixel-patch/index.html
+++ b/project/the-pixel-patch/index.html
@@ -12,10 +12,9 @@
 <body>
     <header>
         <!-- Navigation and logo live here -->
-        <img src="img/logolong.png">
+        <a href="index.html"><img src="img/logolong.png"></a>
         <nav>
             <ul class="flex">
-                <li>Home</li>
                 <li>Game Changes</li>
                 <li>About</li>
         </ul>
